fix overflow and mobile layout for top sections

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 	user-select: none;
 	max-width: 800px;
 	/* start messing with styles */
-	grid-column: 2;
+	grid-column: 1/-1;
 	position: sticky;
 }
 
@@ -125,8 +125,6 @@
 		user-select: none;
 		/* max-width: 500px; */
 		/* start messing with styles */
-		grid-column: 1 / -1;
-		position: sticky;
 	}
 }
 
@@ -145,7 +143,7 @@
 
 @media screen and (max-width: 550px) {
 	.intro {
-		grid-column: 1;
+		grid-column: 1/-1;
 		gap: 0;
 		padding: 0;
 		margin: 0;
@@ -170,11 +168,12 @@
 @media screen and (max-width: 550px) {
 	.intro-text {
 		/* grid-template-columns: 16px 1fr 16px; */
-		grid-column: 1;
+		grid-column: 1/-1;
+		width: 100%;
 		grid-row: 2;
-		font-size: calc(24 / 16 * 1rem);
-		max-width: 27ch;
-		min-width: 25ch;
+		font-size: calc(32 / 16 * 1rem);
+		max-width: 100%;
+		/* min-width: 25ch; */
 		padding-inline: 22px;
 
 		background-image: linear-gradient(
